feat: add fake inv and fix a broken datapacket